// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DraftOrderModal/> render() should render as closed 1`] = `
<DraftOrderModalComponent
  addCustomRow={[Function]}
  addRow={[Function]}
  data={
    Object {
      "actionName": "shopifyDuplicateOrder",
      "customer": Immutable.Map {
        "id": 2721145061399,
        "email": "apu@gorgias.com",
        "default_address": Immutable.Map {
          "default": true,
          "zip": "",
          "city": "",
          "name": "Apu Nahasapeemapetilon",
          "phone": "",
          "province": "",
          "country_name": "France",
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "id": 2888869838871,
          "customer_id": 2721145061399,
          "province_code": null,
          "company": "",
          "address1": "",
          "address2": "",
        },
        "currency": "USD",
      },
      "order": Immutable.Map {
        "checkout_token": null,
        "total_tip_received": "0.0",
        "cancelled_at": null,
        "discount_applications": Immutable.List [],
        "taxes_included": false,
        "landing_site_ref": null,
        "shipping_address": Immutable.Map {
          "zip": null,
          "city": null,
          "name": "Apu Nahasapeemapetilon",
          "latitude": null,
          "phone": null,
          "longitude": null,
          "province": null,
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "province_code": null,
          "company": null,
          "address1": null,
          "address2": null,
        },
        "gateway": "manual",
        "processed_at": "2019-12-13T13:54:05-08:00",
        "device_id": null,
        "note_attributes": Immutable.List [],
        "location_id": null,
        "admin_graphql_api_id": "gid://shopify/Order/1894175539223",
        "buyer_accepts_marketing": false,
        "closed_at": null,
        "financial_status": "partially_paid",
        "discount_codes": Immutable.List [],
        "number": 684,
        "cancel_reason": null,
        "created_at": "2019-12-13T13:54:05-08:00",
        "tax_lines": Immutable.List [
          Immutable.Map {
            "rate": 0.2,
            "price": "1.00",
            "title": "TVA",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
          },
        ],
        "name": "#1684",
        "reference": null,
        "source_url": null,
        "source_identifier": null,
        "processing_method": "manual",
        "total_price": "6.00",
        "shipping_lines": Immutable.List [],
        "phone": null,
        "subtotal_price": "5.00",
        "source_name": "shopify_draft_order",
        "landing_site": null,
        "user_id": 95205899,
        "total_tax": "1.00",
        "billing_address": Immutable.Map {
          "zip": null,
          "city": null,
          "name": "Apu Nahasapeemapetilon",
          "latitude": null,
          "phone": null,
          "longitude": null,
          "province": null,
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "province_code": null,
          "company": null,
          "address1": null,
          "address2": null,
        },
        "currency": "USD",
        "total_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "6.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "6.00",
            "currency_code": "USD",
          },
        },
        "subtotal_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
        },
        "test": false,
        "note": "ahahah??",
        "order_status_url": "https://storegorgias3.myshopify.com/17817573/orders/46a2ba4414e9539325b3a03975da8657/authenticate?key=b422672687af40802905f0ba54c1b2a9",
        "fulfillment_status": null,
        "total_tax_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "1.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "1.00",
            "currency_code": "USD",
          },
        },
        "total_weight": 50,
        "checkout_id": null,
        "payment_gateway_names": Immutable.List [
          "manual",
        ],
        "total_price_usd": "6.00",
        "fulfillments": Immutable.List [],
        "line_items": Immutable.List [
          Immutable.Map {
            "variant_inventory_management": "shopify",
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/LineItem/4193100136471",
            "vendor": "storegorgias3",
            "price": "1.00",
            "quantity": 1,
            "tax_lines": Immutable.List [
              Immutable.Map {
                "rate": 0.2,
                "price": "0.20",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                },
              },
            ],
            "product_id": 8345093387,
            "name": "Acidulous candy - Red / A",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
            "product_exists": true,
            "fulfillable_quantity": 1,
            "properties": Immutable.List [],
            "fulfillment_status": null,
            "fulfillment_service": "manual",
            "discount_allocations": Immutable.List [],
            "variant_id": 31128766316567,
            "title": "Acidulous candy",
            "id": 4193100136471,
            "grams": 10,
            "total_discount": "0.00",
            "sku": "0987654321-1",
            "variant_title": "Red / A",
            "gift_card": false,
            "total_discount_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
            },
            "requires_shipping": true,
          },
          Immutable.Map {
            "variant_inventory_management": "shopify",
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/LineItem/4193100169239",
            "vendor": "storegorgias3",
            "price": "1.00",
            "quantity": 4,
            "tax_lines": Immutable.List [
              Immutable.Map {
                "rate": 0.2,
                "price": "0.60",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.6",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.6",
                    "currency_code": "USD",
                  },
                },
              },
              Immutable.Map {
                "rate": 0.2,
                "price": "0.20",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                },
              },
            ],
            "product_id": 8345093387,
            "name": "Acidulous candy - Red / B",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
            "product_exists": true,
            "fulfillable_quantity": 4,
            "properties": Immutable.List [],
            "fulfillment_status": null,
            "fulfillment_service": "manual",
            "discount_allocations": Immutable.List [],
            "variant_id": 31128766349335,
            "title": "Acidulous candy",
            "id": 4193100169239,
            "grams": 10,
            "total_discount": "0.00",
            "sku": "0987654321-2",
            "variant_title": "Red / B",
            "gift_card": false,
            "total_discount_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
            },
            "requires_shipping": true,
          },
        ],
        "referring_site": null,
        "total_shipping_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
        },
        "total_discounts": "0.00",
        "presentment_currency": "USD",
        "updated_at": "2019-12-13T13:56:10-08:00",
        "tags": "",
        "token": "46a2ba4414e9539325b3a03975da8657",
        "app_id": 1354745,
        "cart_token": null,
        "total_discounts_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
        },
        "order_number": 1684,
        "total_line_items_price": "5.00",
        "id": 1894175539223,
        "customer_locale": null,
        "refunds": Immutable.List [],
        "email": "apu@gorgias.com",
        "total_line_items_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
        },
        "contact_email": "apu@gorgias.com",
        "browser_ip": null,
        "customer": Immutable.Map {
          "accepts_marketing_updated_at": "2019-12-13T13:52:15-08:00",
          "last_order_name": "#1684",
          "verified_email": true,
          "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
          "created_at": "2019-12-13T13:52:15-08:00",
          "phone": null,
          "marketing_opt_in_level": null,
          "currency": "USD",
          "state": "disabled",
          "accepts_marketing": false,
          "note": "hello",
          "total_spent": "6.00",
          "tax_exempt": false,
          "last_name": "Nahasapeemapetilon",
          "orders_count": 1,
          "last_order_id": 1894175539223,
          "default_address": Immutable.Map {
            "default": true,
            "zip": "",
            "city": "",
            "name": "Apu Nahasapeemapetilon",
            "phone": "",
            "province": "",
            "country_name": "France",
            "last_name": "Nahasapeemapetilon",
            "country_code": "FR",
            "country": "France",
            "first_name": "Apu",
            "id": 2888869838871,
            "customer_id": 2721145061399,
            "province_code": null,
            "company": "",
            "address1": "",
            "address2": "",
          },
          "updated_at": "2019-12-13T13:57:02-08:00",
          "tags": "",
          "first_name": "Apu",
          "id": 2721145061399,
          "email": "apu@gorgias.com",
          "multipass_identifier": null,
        },
        "confirmed": true,
      },
    }
  }
  draftOrder={Immutable.Map {}}
  header="Duplicate order"
  integrations={
    Immutable.List [
      Immutable.Map {
        "deleted_datetime": null,
        "mappings": Immutable.List [],
        "meta": Immutable.Map {
          "sync_customer_notes": true,
          "shop_id": 54899465,
          "uses_multi_currency": true,
          "shop_domain": "gorgiastest.com",
          "currency": "USD",
          "shop_display_name": "Store Gorgias 3",
          "shop_plan": "affiliate",
          "shop_name": "gorgiastest",
          "oauth": Immutable.Map {
            "scope": Immutable.List [
              "read_all_orders",
              "read_orders",
              "write_orders",
              "read_customers",
              "write_customers",
              "read_themes",
              "write_themes",
              "read_products",
              "read_draft_orders",
              "write_draft_orders",
            ],
            "status": "success",
          },
          "import_state": Immutable.Map {
            "customers": Immutable.Map {
              "is_over": true,
              "oldest_created_at": "2017-03-17T18:26:16-07:00",
            },
            "products": Immutable.Map {
              "is_over": true,
              "oldest_created_at": "2020-01-07T16:36:31-08:00",
            },
          },
          "is_used_for_billing": true,
          "need_scope_update": false,
        },
        "facebook": null,
        "http": null,
        "deactivated_datetime": null,
        "name": "My Shop",
        "uri": "/api/integrations/1/",
        "decoration": null,
        "locked_datetime": null,
        "created_datetime": "2020-01-28T22:19:15.604153+00:00",
        "type": "shopify",
        "id": 1,
        "description": null,
        "updated_datetime": "2020-01-28T22:19:15.604157+00:00",
      },
    ]
  }
  isOpen={false}
  loading={false}
  loadingMessage={null}
  onBulkChange={[MockFunction]}
  onCancel={[Function]}
  onChange={[MockFunction]}
  onClose={[MockFunction]}
  onCreateDraftOrder={[Function]}
  onEmailInvoice={[Function]}
  onInit={[Function]}
  onOpen={[MockFunction]}
  onPayloadChange={[Function]}
  onReset={[Function]}
  onSubmit={[MockFunction]}
  payload={null}
  products={Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`<DraftOrderModal/> render() should render as open 1`] = `
<DraftOrderModalComponent
  addCustomRow={[Function]}
  addRow={[Function]}
  data={
    Object {
      "actionName": "shopifyDuplicateOrder",
      "customer": Immutable.Map {
        "id": 2721145061399,
        "email": "apu@gorgias.com",
        "default_address": Immutable.Map {
          "default": true,
          "zip": "",
          "city": "",
          "name": "Apu Nahasapeemapetilon",
          "phone": "",
          "province": "",
          "country_name": "France",
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "id": 2888869838871,
          "customer_id": 2721145061399,
          "province_code": null,
          "company": "",
          "address1": "",
          "address2": "",
        },
        "currency": "USD",
      },
      "order": Immutable.Map {
        "checkout_token": null,
        "total_tip_received": "0.0",
        "cancelled_at": null,
        "discount_applications": Immutable.List [],
        "taxes_included": false,
        "landing_site_ref": null,
        "shipping_address": Immutable.Map {
          "zip": null,
          "city": null,
          "name": "Apu Nahasapeemapetilon",
          "latitude": null,
          "phone": null,
          "longitude": null,
          "province": null,
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "province_code": null,
          "company": null,
          "address1": null,
          "address2": null,
        },
        "gateway": "manual",
        "processed_at": "2019-12-13T13:54:05-08:00",
        "device_id": null,
        "note_attributes": Immutable.List [],
        "location_id": null,
        "admin_graphql_api_id": "gid://shopify/Order/1894175539223",
        "buyer_accepts_marketing": false,
        "closed_at": null,
        "financial_status": "partially_paid",
        "discount_codes": Immutable.List [],
        "number": 684,
        "cancel_reason": null,
        "created_at": "2019-12-13T13:54:05-08:00",
        "tax_lines": Immutable.List [
          Immutable.Map {
            "rate": 0.2,
            "price": "1.00",
            "title": "TVA",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
          },
        ],
        "name": "#1684",
        "reference": null,
        "source_url": null,
        "source_identifier": null,
        "processing_method": "manual",
        "total_price": "6.00",
        "shipping_lines": Immutable.List [],
        "phone": null,
        "subtotal_price": "5.00",
        "source_name": "shopify_draft_order",
        "landing_site": null,
        "user_id": 95205899,
        "total_tax": "1.00",
        "billing_address": Immutable.Map {
          "zip": null,
          "city": null,
          "name": "Apu Nahasapeemapetilon",
          "latitude": null,
          "phone": null,
          "longitude": null,
          "province": null,
          "last_name": "Nahasapeemapetilon",
          "country_code": "FR",
          "country": "France",
          "first_name": "Apu",
          "province_code": null,
          "company": null,
          "address1": null,
          "address2": null,
        },
        "currency": "USD",
        "total_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "6.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "6.00",
            "currency_code": "USD",
          },
        },
        "subtotal_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
        },
        "test": false,
        "note": "ahahah??",
        "order_status_url": "https://storegorgias3.myshopify.com/17817573/orders/46a2ba4414e9539325b3a03975da8657/authenticate?key=b422672687af40802905f0ba54c1b2a9",
        "fulfillment_status": null,
        "total_tax_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "1.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "1.00",
            "currency_code": "USD",
          },
        },
        "total_weight": 50,
        "checkout_id": null,
        "payment_gateway_names": Immutable.List [
          "manual",
        ],
        "total_price_usd": "6.00",
        "fulfillments": Immutable.List [],
        "line_items": Immutable.List [
          Immutable.Map {
            "variant_inventory_management": "shopify",
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/LineItem/4193100136471",
            "vendor": "storegorgias3",
            "price": "1.00",
            "quantity": 1,
            "tax_lines": Immutable.List [
              Immutable.Map {
                "rate": 0.2,
                "price": "0.20",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                },
              },
            ],
            "product_id": 8345093387,
            "name": "Acidulous candy - Red / A",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
            "product_exists": true,
            "fulfillable_quantity": 1,
            "properties": Immutable.List [],
            "fulfillment_status": null,
            "fulfillment_service": "manual",
            "discount_allocations": Immutable.List [],
            "variant_id": 31128766316567,
            "title": "Acidulous candy",
            "id": 4193100136471,
            "grams": 10,
            "total_discount": "0.00",
            "sku": "0987654321-1",
            "variant_title": "Red / A",
            "gift_card": false,
            "total_discount_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
            },
            "requires_shipping": true,
          },
          Immutable.Map {
            "variant_inventory_management": "shopify",
            "taxable": true,
            "admin_graphql_api_id": "gid://shopify/LineItem/4193100169239",
            "vendor": "storegorgias3",
            "price": "1.00",
            "quantity": 4,
            "tax_lines": Immutable.List [
              Immutable.Map {
                "rate": 0.2,
                "price": "0.60",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.6",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.6",
                    "currency_code": "USD",
                  },
                },
              },
              Immutable.Map {
                "rate": 0.2,
                "price": "0.20",
                "title": "TVA",
                "price_set": Immutable.Map {
                  "shop_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                  "presentment_money": Immutable.Map {
                    "amount": "0.2",
                    "currency_code": "USD",
                  },
                },
              },
            ],
            "product_id": 8345093387,
            "name": "Acidulous candy - Red / B",
            "price_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "1.0",
                "currency_code": "USD",
              },
            },
            "product_exists": true,
            "fulfillable_quantity": 4,
            "properties": Immutable.List [],
            "fulfillment_status": null,
            "fulfillment_service": "manual",
            "discount_allocations": Immutable.List [],
            "variant_id": 31128766349335,
            "title": "Acidulous candy",
            "id": 4193100169239,
            "grams": 10,
            "total_discount": "0.00",
            "sku": "0987654321-2",
            "variant_title": "Red / B",
            "gift_card": false,
            "total_discount_set": Immutable.Map {
              "shop_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
              "presentment_money": Immutable.Map {
                "amount": "0.0",
                "currency_code": "USD",
              },
            },
            "requires_shipping": true,
          },
        ],
        "referring_site": null,
        "total_shipping_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
        },
        "total_discounts": "0.00",
        "presentment_currency": "USD",
        "updated_at": "2019-12-13T13:56:10-08:00",
        "tags": "",
        "token": "46a2ba4414e9539325b3a03975da8657",
        "app_id": 1354745,
        "cart_token": null,
        "total_discounts_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "0.00",
            "currency_code": "USD",
          },
        },
        "order_number": 1684,
        "total_line_items_price": "5.00",
        "id": 1894175539223,
        "customer_locale": null,
        "refunds": Immutable.List [],
        "email": "apu@gorgias.com",
        "total_line_items_price_set": Immutable.Map {
          "shop_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
          "presentment_money": Immutable.Map {
            "amount": "5.00",
            "currency_code": "USD",
          },
        },
        "contact_email": "apu@gorgias.com",
        "browser_ip": null,
        "customer": Immutable.Map {
          "accepts_marketing_updated_at": "2019-12-13T13:52:15-08:00",
          "last_order_name": "#1684",
          "verified_email": true,
          "admin_graphql_api_id": "gid://shopify/Customer/2721145061399",
          "created_at": "2019-12-13T13:52:15-08:00",
          "phone": null,
          "marketing_opt_in_level": null,
          "currency": "USD",
          "state": "disabled",
          "accepts_marketing": false,
          "note": "hello",
          "total_spent": "6.00",
          "tax_exempt": false,
          "last_name": "Nahasapeemapetilon",
          "orders_count": 1,
          "last_order_id": 1894175539223,
          "default_address": Immutable.Map {
            "default": true,
            "zip": "",
            "city": "",
            "name": "Apu Nahasapeemapetilon",
            "phone": "",
            "province": "",
            "country_name": "France",
            "last_name": "Nahasapeemapetilon",
            "country_code": "FR",
            "country": "France",
            "first_name": "Apu",
            "id": 2888869838871,
            "customer_id": 2721145061399,
            "province_code": null,
            "company": "",
            "address1": "",
            "address2": "",
          },
          "updated_at": "2019-12-13T13:57:02-08:00",
          "tags": "",
          "first_name": "Apu",
          "id": 2721145061399,
          "email": "apu@gorgias.com",
          "multipass_identifier": null,
        },
        "confirmed": true,
      },
    }
  }
  draftOrder={Immutable.Map {}}
  header="Duplicate order"
  integrations={
    Immutable.List [
      Immutable.Map {
        "deleted_datetime": null,
        "mappings": Immutable.List [],
        "meta": Immutable.Map {
          "sync_customer_notes": true,
          "shop_id": 54899465,
          "uses_multi_currency": true,
          "shop_domain": "gorgiastest.com",
          "currency": "USD",
          "shop_display_name": "Store Gorgias 3",
          "shop_plan": "affiliate",
          "shop_name": "gorgiastest",
          "oauth": Immutable.Map {
            "scope": Immutable.List [
              "read_all_orders",
              "read_orders",
              "write_orders",
              "read_customers",
              "write_customers",
              "read_themes",
              "write_themes",
              "read_products",
              "read_draft_orders",
              "write_draft_orders",
            ],
            "status": "success",
          },
          "import_state": Immutable.Map {
            "customers": Immutable.Map {
              "is_over": true,
              "oldest_created_at": "2017-03-17T18:26:16-07:00",
            },
            "products": Immutable.Map {
              "is_over": true,
              "oldest_created_at": "2020-01-07T16:36:31-08:00",
            },
          },
          "is_used_for_billing": true,
          "need_scope_update": false,
        },
        "facebook": null,
        "http": null,
        "deactivated_datetime": null,
        "name": "My Shop",
        "uri": "/api/integrations/1/",
        "decoration": null,
        "locked_datetime": null,
        "created_datetime": "2020-01-28T22:19:15.604153+00:00",
        "type": "shopify",
        "id": 1,
        "description": null,
        "updated_datetime": "2020-01-28T22:19:15.604157+00:00",
      },
    ]
  }
  isOpen={true}
  loading={false}
  loadingMessage={null}
  onBulkChange={[MockFunction]}
  onCancel={[Function]}
  onChange={[MockFunction]}
  onClose={[MockFunction]}
  onCreateDraftOrder={[Function]}
  onEmailInvoice={[Function]}
  onInit={[Function]}
  onOpen={[MockFunction]}
  onPayloadChange={[Function]}
  onReset={[Function]}
  onSubmit={[MockFunction]}
  payload={null}
  products={Map {}}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`<DraftOrderModalComponent/> render() should render as closed 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={false}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <Loader
    inline={false}
    minHeight="500px"
    size="40px"
  />
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<DraftOrderModalComponent/> render() should render as open, with empty order table 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={true}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <div>
    <DraftOrderTable
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      lineItems={Immutable.List []}
      onChange={[Function]}
      products={Map {}}
      shopName="gorgiastest"
    />
    <Connect(DuplicateOrderFooterComponent)
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      editable={true}
    />
    <div
      className="emailInvoiceContainer"
    >
      <h4
        className="mr-auto"
      >
        Email invoice
      </h4>
      <EmailInvoicePopover
        actionName="shopifyDuplicateOrder"
        color="primary"
        customerEmail="apu@gorgias.com"
        disabled={true}
        id="email-invoice"
        onSubmit={[Function]}
        placement="bottom"
      >
        Email invoice
      </EmailInvoicePopover>
    </div>
  </div>
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<DraftOrderModalComponent/> render() should render as open, with invoice sent 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={true}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <div>
    <DraftOrderTable
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      lineItems={
        Immutable.List [
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 1,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766316567,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / A",
            "requires_shipping": true,
          },
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 4,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766349335,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / B",
            "requires_shipping": true,
          },
        ]
      }
      onChange={[Function]}
      products={Map {}}
      shopName="gorgiastest"
    />
    <Connect(DuplicateOrderFooterComponent)
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      editable={true}
    />
    <div
      className="emailInvoiceContainer"
    >
      <h4
        className="mr-auto"
      >
        Invoice sent
      </h4>
      <span
        className="mr-4"
      >
        Sent on
         
        <Connect(DatetimeLabel)
          dateTime="2020-02-26T21:31:34-05:00"
          hasTooltip={false}
          labelFormat="L LT"
        />
      </span>
      <EmailInvoicePopover
        actionName="shopifyDuplicateOrder"
        color="link"
        customerEmail="apu@gorgias.com"
        disabled={false}
        id="email-invoice"
        onSubmit={[Function]}
        placement="bottom"
      >
        Email new invoice
      </EmailInvoicePopover>
    </div>
  </div>
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<DraftOrderModalComponent/> render() should render as open, with order table 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={true}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <div>
    <DraftOrderTable
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      lineItems={
        Immutable.List [
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 1,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766316567,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / A",
            "requires_shipping": true,
          },
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 4,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766349335,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / B",
            "requires_shipping": true,
          },
        ]
      }
      onChange={[Function]}
      products={Map {}}
      shopName="gorgiastest"
    />
    <Connect(DuplicateOrderFooterComponent)
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      editable={true}
    />
    <div
      className="emailInvoiceContainer"
    >
      <h4
        className="mr-auto"
      >
        Email invoice
      </h4>
      <EmailInvoicePopover
        actionName="shopifyDuplicateOrder"
        color="primary"
        customerEmail="apu@gorgias.com"
        disabled={false}
        id="email-invoice"
        onSubmit={[Function]}
        placement="bottom"
      >
        Email invoice
      </EmailInvoicePopover>
    </div>
  </div>
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<DraftOrderModalComponent/> render() should render as open, with order table and default currency, when its missing 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={true}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <div>
    <DraftOrderTable
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      lineItems={
        Immutable.List [
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766316567",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 1,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766316567,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / A",
            "requires_shipping": true,
          },
          Immutable.Map {
            "variant_admin_graphql_api_id": "gid://shopify/ProductVariant/31128766349335",
            "applied_discount": null,
            "taxable": true,
            "price": "9.99",
            "quantity": 4,
            "product_id": 8345093387,
            "product_exists": true,
            "properties": Immutable.List [],
            "variant_id": 31128766349335,
            "title": "Acidulous candy",
            "sku": "11111",
            "variant_title": "Red / B",
            "requires_shipping": true,
          },
        ]
      }
      onChange={[Function]}
      products={Map {}}
      shopName="gorgiastest"
    />
    <Connect(DuplicateOrderFooterComponent)
      actionName="shopifyDuplicateOrder"
      currencyCode="USD"
      editable={true}
    />
    <div
      className="emailInvoiceContainer"
    >
      <h4
        className="mr-auto"
      >
        Email invoice
      </h4>
      <EmailInvoicePopover
        actionName="shopifyDuplicateOrder"
        color="primary"
        customerEmail="apu@gorgias.com"
        disabled={false}
        id="email-invoice"
        onSubmit={[Function]}
        placement="bottom"
      >
        Email invoice
      </EmailInvoicePopover>
    </div>
  </div>
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={false}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<DraftOrderModalComponent/> render() should render as open, without order table 1`] = `
<Modal
  backdrop="static"
  bodyClassName="p-0"
  dismissible={true}
  header="Duplicate order"
  isOpen={true}
  keyboard={false}
  onClose={[Function]}
  size="xl"
>
  <div
    className="formHeader"
  >
    <ProductSearchInput
      autoFocus={true}
      className="searchInput"
      onVariantClicked={[Function]}
      searchOnFocus={false}
    />
    <AddCustomItemPopover
      actionName="shopifyDuplicateOrder"
      className="headerButton"
      currencyCode="USD"
      id="add-custom-item"
      onSubmit={[Function]}
      placement="bottom"
    />
  </div>
  <Loader
    inline={false}
    minHeight="500px"
    size="40px"
  />
  <ModalFooter
    className="formFooter"
    tag="div"
  >
    <Button
      className="focusable"
      color="secondary"
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Cancel
    </Button>
    <Button
      className="focusable ml-auto"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as paid
    </Button>
    <Button
      className="focusable"
      color="primary"
      disabled={true}
      onClick={[Function]}
      tabIndex={0}
      tag="button"
    >
      Create order as pending
    </Button>
  </ModalFooter>
</Modal>
`;
